--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,13 @@
 * Browsers: last 4 version
 */
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @font-face {
   font-family: "fontawesome-webfont";
   src: url("../fonts/fontawesome/fontawesome-webfont.eot");
@@ -235,7 +242,9 @@ nav {
 
 .mobile-menu-checkbox,
 .mobile-menu-btn,
-.mobile-menu-icon {display: none;}
+.mobile-menu-icon {
+  display: none;
+}
 
 .menu {
   display: -webkit-box;
@@ -627,12 +636,31 @@ nav {
 .advertising {
   width: 100%;
   min-height: 150px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#211b19),
+    to(#4e3427)
+  );
+  background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
   background-image: linear-gradient(to top, #211b19, #4e3427);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-line-pack: center;
   align-content: center;
 }
 
@@ -666,12 +694,14 @@ nav {
   text-transform: uppercase;
   text-align: center;
   border-radius: 3px;
+  -webkit-box-shadow: inset 0px -3px 0 0 #736357;
   box-shadow: inset 0px -3px 0 0 #736357;
   background-color: #998675;
   padding: 18px 28px 18px 28px;
   margin-right: 350px;
 }
 .advertising-a:hover {
+  -webkit-box-shadow: inset 0px -3px 0 0 #998675;
   box-shadow: inset 0px -3px 0 0 #998675;
   background-color: #736357;
   color: #fff;
@@ -1136,6 +1166,7 @@ nav {
 .progress {
   width: 1920px;
   height: 300px;
+  background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
   background-image: -webkit-gradient(
     linear,
     left bottom,
@@ -1143,7 +1174,6 @@ nav {
     from(#211b19),
     to(#4e3427)
   );
-  background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
   background-image: linear-gradient(to top, #211b19, #4e3427);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1181,6 +1211,8 @@ nav {
 }
 
 .progress-box:hover svg.progress-svg {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   fill: white;
 }
@@ -1199,6 +1231,8 @@ nav {
   margin: 30px 0 0 0;
 }
 .progress-box:hover .progress-point {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: rgb(199, 178, 153);
 }
@@ -1219,6 +1253,8 @@ nav {
 }
 
 .progress-box:hover .progress-txt {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #ffffff;
 }
@@ -1236,7 +1272,10 @@ nav {
 }
 
 .recent-posts-box:hover .recent-posts-img {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
+  -webkit-filter: brightness(60%);
   filter: brightness(60%);
 }
 
@@ -1271,10 +1310,20 @@ nav {
 }
 
 .reset-post-wrp {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-top: 40px;
 }
@@ -1287,6 +1336,8 @@ nav {
 }
 
 .recent-posts-box:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   background-color: #362f2d;
 }
@@ -1294,9 +1345,17 @@ nav {
 .calendar {
   position: absolute;
   margin: -200px 0 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -1314,19 +1373,25 @@ nav {
   color: #ffffff;
   padding: 9px 11px 9px 10px;
   background-color: #363636;
-  -moz-border-radius-topleft: 4px;
-  -webkit-border-top-left-radius: 4px;
   border-top-left-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -webkit-border-top-right-radius: 4px;
   border-top-right-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
 .recent-posts-box:hover .date {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   background-color: #c7b299;
 }
@@ -1345,18 +1410,21 @@ nav {
   color: #ffffff;
   padding: 7px 14px 7px 13px;
   background-color: #252525;
-  -moz-border-radius-bottomright: 4px;
-  -webkit-border-bottom-right-radius: 4px;
   border-bottom-right-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -webkit-border-bottom-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
 .recent-posts-box:hover .month {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   background-color: #a48d72;
 }
@@ -1384,6 +1452,8 @@ nav {
 }
 
 .recent-pagination-img:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   background-color: transparent;
   border: solid 2px #d3c1ad;
@@ -1407,6 +1477,8 @@ nav {
 }
 
 .recent-posts-box:hover .recent-posts-title {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #c7b299;
 }
@@ -1425,6 +1497,8 @@ nav {
 }
 
 .recent-posts-box:hover .recent-posts-title {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #fff;
 }
@@ -1443,11 +1517,15 @@ nav {
 }
 
 .recent-posts-box:hover .recent-posts-a {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #c7b299;
 }
 
 .recent-posts-box:hover .recent-posts-a:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #94826c;
 }
@@ -1464,17 +1542,25 @@ nav {
 }
 
 .recent-posts-box:hover .recent-posts-a::after {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   border-left: 8px solid #c7b299;
 }
 
 .recent-posts-box:hover .recent-posts-a:hover::after {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   border-left: 8px solid #756755;
 }
 
 .box-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   margin: 40px 0 80px 0;
 }
@@ -1489,34 +1575,57 @@ nav {
   fill: #d1d1d1;
   width: 22px;
   height: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
 .partners {
   background-image: url(../img/partners-bg.jpg);
   min-height: 490px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-line-pack: center;
   align-content: center;
 }
 
 .partners-img {
+  -webkit-transition: 1s;
+  -o-transition: 1s;
   transition: 1s; /* Время эффекта */
   display: block;
   margin: 140px 45px 140px 45px;
 }
 .partners-img:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
   transform: scale(1.2); /* Увеличиваем масштаб */
 }
 
 .footer1 {
   background-color: #191919;
   padding: 80px 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -1600,6 +1709,8 @@ nav {
 
 .about-link:after {
   content: "  border-left: 8px solid #00bff3";
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   display: block;
   position: absolute;
@@ -1613,6 +1724,8 @@ nav {
 
 .about-link:hover::after {
   content: "";
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #00bff3;
   display: block;
@@ -1621,7 +1734,12 @@ nav {
 .footer-recent-posts {
   min-width: 270px;
   margin: 28px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin: 0 30px 0 30px;
 }
@@ -1674,50 +1792,70 @@ nav {
 }
 
 .recent-posts-link:hover .posts-date {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #ffffff;
 }
 
 .recent-posts-link:active .posts-date {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #e2e2e2;
 }
 
 .recent-posts-last:hover .posts-date {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #ffffff;
 }
 
 .recent-posts-last:active .posts-date {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #e2e2e2;
 }
 
 .recent-posts-link:hover .posts-p1 {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #c7b299;
 }
 
 .recent-posts-link:active .posts-p1 {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #b19c84;
 }
 
 .recent-posts-link:hover .posts-p2 {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #c7b299;
 }
 
 .recent-posts-link:active .posts-p2 {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #b19c84;
 }
 .recent-posts-last:hover .posts-p3 {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #c7b299;
 }
 
 .recent-posts-last:active .posts-p3 {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #b19c84;
 }
@@ -1731,11 +1869,15 @@ nav {
 }
 
 .twet-api:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #0591b8;
 }
 
 .twet-api:active {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #00bff3;
 }
@@ -1745,11 +1887,15 @@ nav {
 }
 
 .twet-link:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #bbbaba;
 }
 
 .twet-link:active {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #959595;
 }
@@ -1775,21 +1921,36 @@ nav {
 }
 
 .widget-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-line-pack: center;
   align-content: center;
 }
 
 .widget-img-all {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms; /* Время эффекта */
   display: block;
   margin: 5px;
 }
 
 .widget-img-all:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
   transform: scale(1.2); /* Увеличиваем масштаб */
 }
 
@@ -1805,11 +1966,22 @@ nav {
   line-height: 1.54;
   letter-spacing: normal;
   padding: 0 375px 0 375px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-line-pack: center;
   align-content: center;
 }
 
@@ -1819,16 +1991,22 @@ a.footer2-link {
 }
 
 a.footer2-link:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #c7b299;
 }
 
 a.footer2-link:hover {
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
   transition: 500ms;
   color: #a5927a;
 }
 
 .copyright-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -1878,6 +2056,8 @@ a.support {
 }
 
 .copyright-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
