--- a/css/media-768.css
+++ b/css/media-768.css
@@ -19,6 +19,8 @@
   }
 
   .logo {
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
   }
 
@@ -38,8 +40,14 @@
 
   .mobile-menu {
     position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
     padding: 0 16px;
     top: 0;
@@ -53,12 +61,20 @@
     position: relative;
     top: 50px;
     right: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     width: 60px;
     height: 30px;
     cursor: pointer;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
     z-index: 999;
   }
@@ -69,6 +85,8 @@
     background: white;
     width: 90%;
     height: 4px;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
   }
 
@@ -80,6 +98,8 @@
     background: white;
     width: 100%;
     height: 4px;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
   }
 
@@ -94,11 +114,22 @@
   .mobile-menu-container {
     position: fixed;
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-line-pack: center;
     align-content: center;
     top: 50px;
     left: 0;
@@ -106,20 +137,39 @@
     z-index: 998;
     height: 0;
     opacity: 1;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
+    -webkit-transition-delay: 0.2s;
+    -o-transition-delay: 0.2s;
     transition-delay: 0.2s;
     overflow: hidden;
     background-color: #4d4c48;
   }
 
   .menu-ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-line-pack: center;
     align-content: center;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
+    -webkit-transition-delay: 0.5s;
+    -o-transition-delay: 0.5s;
     transition-delay: 0.5s;
     list-style: none;
     padding-left: 0;
@@ -143,11 +193,15 @@
 
   .mobile-menu-checkbox:checked ~ .mobile-menu-nav {
     opacity: 1;
+    -webkit-transition-delay: 0s;
+    -o-transition-delay: 0s;
     transition-delay: 0s;
   }
 
   .mobile-menu-checkbox:checked ~ .mobile-menu-container {
     height: 650px;
+    -webkit-transition-delay: 0s;
+    -o-transition-delay: 0s;
     transition-delay: 0s;
     top: 0;
   }
@@ -162,11 +216,13 @@
   }
 
   .mobile-menu-checkbox:checked ~ .mobile-menu-btn .mobile-menu-icon::after {
+    -ms-transform: rotate(-45deg);
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
   }
 
   .mobile-menu-checkbox:checked ~ .mobile-menu-btn .mobile-menu-icon::before {
+    -ms-transform: rotate(45deg);
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
   }
@@ -179,6 +235,8 @@
     padding: 0;
     min-height: 60px;
     margin-left: -50px;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
   }
   .button-cart:active {
@@ -195,6 +253,8 @@
   .search-form-img {
     width: 24px;
     height: 24px;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
   }
 
@@ -231,11 +291,22 @@
 
   .options {
     width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
+    -ms-flex-line-pack: center;
     align-content: center;
     margin-top: 40px;
     margin-bottom: 40px;
@@ -321,6 +392,8 @@
     outline: none;
     top: -150px;
     left: 25%;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
   }
 
@@ -329,6 +402,8 @@
     outline: none;
     top: -150px;
     left: 60%;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
   }
 
@@ -446,6 +521,7 @@
   .progress {
     width: 768px;
     height: 235px;
+    background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
     background-image: -webkit-gradient(
       linear,
       left bottom,
@@ -453,7 +529,6 @@
       from(#211b19),
       to(#4e3427)
     );
-    background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
     background-image: linear-gradient(to top, #211b19, #4e3427);
     display: -webkit-box;
     display: -ms-flexbox;
@@ -466,11 +541,14 @@
   .progress-box {
     width: 140px;
     display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: ;
+    -ms-flex-pack: ;
     justify-content: ;
     margin: 0 6px 0 6px;
   }
@@ -505,10 +583,20 @@
   }
 
   .reset-post-wrp {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-top: 25px;
   }
@@ -529,8 +617,14 @@
     fill: #d1d1d1;
     width: 22px;
     height: 22px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
     transform: scale(1.5);
     margin: 0 25px;
   }
@@ -538,15 +632,28 @@
   .partners {
     background-image: url(../img/partners-bg.jpg);
     min-height: 230px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-line-pack: center;
     align-content: center;
   }
 
   .partners-img {
+    -webkit-transition: 1s;
+    -o-transition: 1s;
     transition: 1s;
     display: block;
     margin: 20px;
